--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         <img src="OIP (2).jpeg" alt="imagem do logo tipo da linguagem JavaScript">
     </div>
     <main class="formulario">
-        <p>
+        <p id="p1">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum. <br><a href="https://vocacao.eadplataforma.app/test/start/400/1124/5031/1033">site vocacao</a>
         </p>
+        <button onclick="mudar()">Mudar Frase</button>
         <form>
           <h1>Dados pessoais</h1>
     
@@ -96,7 +97,7 @@
     <footer>
         desenvolvido por Renatha
     </footer>
-
+<script src="script.js"></script>
 </body>
 
 </html>
